--- a/nvme_rhel_91.adoc
+++ b/nvme_rhel_91.adoc
@@ -34,56 +34,87 @@ SAN booting using the NVMe-oF protocol is not currently supported.
 
 include::_include/nvme/enable-san-booting.adoc[]
 
-== Enable in-kernel NVMe multipath
-
-You can use the following procedure to enable in-kernel NVMe multipath.
+== Step 2: Validate software versions
+ 
+You can use the following procedure to validate the minimum supported RHEL 9.1 software versions.
 
 .Steps
 
-.	Install RHEL 9.1 on the server. 
-
-.	After the installation is complete, verify that you are running the specified RHEL 9.1 kernel. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported versions.
+. Install RHEL 9.1 on the server. After the installation is complete, verify that you are running the specified RHEL 9.1 kernel: 
 +
-Example:
-+
-
+[source,cli]
 ----
-# uname -r
- 5.14.0-162.6.1.el9_1.x86_64
+uname -r
 ----
 +
-
-.	Install the `nvme-cli` package:
-+
-Example:
+The following example shows a RHEL 9.1 kernel version:
 +
 ----
-# rpm -qa|grep nvme-cli
+5.14.0-162.6.1.el9_1.x86_64
+----
+
+. Install the `nvme-cli` package:
++
+[source,cli]
+----
+rpm -qa|grep nvme-cli
+----
++
+The following example shows an nvme-cli package version:
++
+----
 nvme-cli-2.0-4.el9.x86_64
 ----
 
-.	On the host, check the host NQN string at `/etc/nvme/hostnqn` and verify that it matches the host NQN string for the corresponding subsystem on the ONTAP array. Example:
+. Install the `libnvme` package:
++
+[source,cli]
+----
+rpm -qa|grep libnvme
+----
++
+The following example shows an libnvme package version:
 +
 ----
+libnvme-1.0-3.el9.x86_64
+----
 
-# cat /etc/nvme/hostnqn
+. On the RHEL 9.1 host, check the hostnqn string at `/etc/nvme/hostnqn`:
++
+[source,cli]
+----
+cat /etc/nvme/hostnqn
+----
++
+The following example shows an hostnqn version:
++
+----
 nqn.2014-08.org.nvmexpress:uuid:325e7554-1f9b-11ec-8489-3a68dd61a4df
+----
 
-
-::> vserver nvme subsystem host show -vserver vs_nvme207 
-Vserver     Subsystem       Host NQN
------------ --------------- ----------------------------------------------------------
-vs_nvme207 rhel_207_LPe32002     nqn.2014-08.org.nvmexpress:uuid:325e7554-1f9b-11ec-8489-3a68dd61a4df
-
+. Verify that the `hostnqn` string matches the `hostnqn` string for the corresponding subsystem on the ONTAP array:
++
+[source,cli]
+----
+::> vserver nvme subsystem host show -vserver vs_nvme207
 ----
 +
-NOTE: If the host NQN strings do not match, you should use the `vserver modify` command to update the host NQN string on your corresponding ONTAP NVMe subsystem to match the host NQN string `/etc/nvme/hostnqn` on the host.
+.Show example
+[%collapsible]
+====
+----
+Vserver     Subsystem          Host NQN
+----------- --------------- ----------------------------------------------------------
+vs_nvme207   rhel_207_LPe32002    nqn.2014-08.org.nvmexpress:uuid:325e7554-1f9b-11ec-8489-3a68dd61a4df
+----
+====
++
+[NOTE]
+If the `hostnqn` strings do not match, use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP array subsystem to match the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
 
-.	Reboot the host.
+== Step 3: Configure NVMe/FC
 
-== Configure NVMe/FC
-
-You can configure NVMe/FC for Broadcom/Emulex or Marvell/Qlogic adapters.
+You can configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters. For NVMe/FC configured with a Broadcom adapter, you can enable I/O requests of size 1MB.
 
 [role="tabbed-block"]
 ====
@@ -401,7 +432,7 @@ NSID UUID                                   Size
 }
 ----
 
-== Step 7: Review the known issues
+== Step 5: Review the known issues
 
 The NVMe-oF host configuration for RHEL 9.1 with ONTAP has the following known issues:
 
