ONTAPDOC-3124 SME feedback

--- a/nvme-proxmox-84.adoc
+++ b/nvme-proxmox-84.adoc
@@ -85,6 +85,10 @@ include::_include/nvme/validate-nvme-of-latersteps-version10-rockylinux-proxmox.
 
 There are no known issues.
 
+== What's next?
+
+* link:https://pve.proxmox.com/wiki/Storage[Learn about configuring Proxmox storage pools and volumes].
+
 // 2025 JUN 25, ONTAPDOC-3090
 // ONTAPDOC-2561 25-Nov-2024
 // ONTAPDOC-2987 13-May-2025
