--- a/hu-proxmox-84.adoc
+++ b/hu-proxmox-84.adoc
@@ -13,7 +13,7 @@ summary: Install the Linux Host Utilities on a Proxmox 8.4 host to manage FCP an
 :imagesdir: ./media/
 
 [.lead]
-The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Proxmox 8.4 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
+Configure Proxmox 8.4 for multipathing and with specific parameters and settings for FCP and iSCSI protocol operations with ONTAP storage.
 
 include::_include/hu/linux-enable-san-boot.adoc[]
 
