--- a/nvme-rhel-81.adoc
+++ b/nvme-rhel-81.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_81.html
+permalink: nvme-rhel-81.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: Describes how to configure NVMe/FC for RHEL 8.1 with ONTAP
 ---
