--- a/nvme-rhel-83.adoc
+++ b/nvme-rhel-83.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_83.html
+permalink: nvme-rhel-83.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe/FC Host for RHEL 8.3 with ONTAP
 ---
