--- a/nvme-rhel-810.adoc
+++ b/nvme-rhel-810.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_810.html
+permalink: nvme-rhel-810.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 8.10 with ONTAP
 ---
@@ -134,82 +134,130 @@ defaults {
 
 == Step 3: Configure NVMe/FC
 
-You can configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters. For NVMe/FC configured with a Broadcom adapter, you can enable I/O requests of size 1MB.
+You can configure NVMe/FC for Broadcom/Emulex or Marvell/QLogic adapters.
 
 [role="tabbed-block"]
-====
+=====
 .Broadcom/Emulex
 --
+Configure NVMe/FC for a Broadcom/Emulex adapter.
+
 .Steps
 
-. Verify that you are using the supported adapter model: 
+. Verify that you are using the supported adapter model:
+
+.. Display the model names:
 +
+[source,cli]
 ----
-# cat /sys/class/scsi_host/host*/modelname
+cat /sys/class/scsi_host/host*/modelname
 ----
 +
-*Example output:*
+You should see the following output:
 +
 ----
 LPe32002-M2
 LPe32002-M2
 ----
+
+.. Display the model descriptions:
++
+[source,cli]
+----
+cat /sys/class/scsi_host/host*/modeldesc
+----
++
+You should see output similar to:
 +
 ----
-# cat /sys/class/scsi_host/host*/modeldesc
-----
-+
-*Example output:*
-+
-----
-Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter 
+Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 ----
 
-. Verify that you are using the recommended Broadcom `lpfc` firmware and inbox driver: 
+. Verify that you are using the recommended Broadcom `lpfc` firmware and inbox driver:
+
+.. Display the firmware version:
++
+[source,cli]
+----
+cat /sys/class/scsi_host/host*/fwrev
+----
++
+The following example shows firmware versions:
 +
 ----
-# cat /sys/class/scsi_host/host*/fwrev
 14.2.539.21, sli-4:2:c
 14.2.539.21, sli-4:2:c
 ----
+
+.. Display the inbox driver version:
++
+[source,cli]
+----
+cat /sys/module/lpfc/version
+----
++
+The following example shows a driver version:
 +
 ----
-# cat /sys/module/lpfc/version 
 0:14.0.0.21
 ----
+
 +
 For the current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
-. Verify that `lpfc_enable_fc4_type` is set to `3`:
+. Verify that the expected output of `lpfc_enable_fc4_type` is set to `3`:
 +
+[source,cli]
 ----
-# cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
-3
+cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 ----
 
-. Verify that the initiator ports are up and running and that you can see the target LIFs:
+. Verify that you can view your initiator ports:
++
+[source,cli]
+----
+cat /sys/class/fc_host/host*/port_name
+----
++
+You should see output similar to:
 +
 ----
-# cat /sys/class/fc_host/host*/port_name
 0x10000090fae0ec88
-0x10000090fae0ec89 
+0x10000090fae0ec89
+----
+
+. Verify that your initiator ports are online:
++
+[source,cli]
+----
+cat /sys/class/fc_host/host*/port_state
 ----
 +
+You should see the following output:
++
 ----
-# cat /sys/class/fc_host/host*/port_state
 Online
 Online
 ----
+
+. Verify that the NVMe/FC initiator ports are enabled and that the target ports are visible:
 +
+[source,cli]
+----
+cat /sys/class/scsi_host/host*/nvme_info
+----
++
+.Show example
+[%collapsible]
+====
 [subs=+quotes]
 ----
-# cat /sys/class/scsi_host/host*/nvme_info 
 NVME Initiator Enabled
 XRI Dist lpfc0 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc0 WWPN x100000109bf044b1 WWNN x200000109bf044b1 DID x022a00 ONLINE
-NVME RPORT       WWPN x211ad039eaa7dfc8 WWNN x2119d039eaa7dfc8 DID x021302 TARGET DISCSRVC ONLINE
-NVME RPORT       WWPN x211cd039eaa7dfc8 WWNN x2119d039eaa7dfc8 DID x020b02 TARGET DISCSRVC ONLINE
+NVME LPORT lpfc0 WWPN x100000109bf044b1 WWNN x200000109bf044b1 DID x022a00 *ONLINE*
+NVME RPORT       WWPN x211ad039eaa7dfc8 WWNN x2119d039eaa7dfc8 DID x021302 *TARGET DISCSRVC ONLINE*
+NVME RPORT       WWPN x211cd039eaa7dfc8 WWNN x2119d039eaa7dfc8 DID x020b02 *TARGET DISCSRVC ONLINE*
 
 NVME Statistics
 LS: Xmt 00000001ff Cmpl 00000001ff Abort 00000000
@@ -220,9 +268,9 @@ FCP CMPL: xb 00000354 Err 00000361
 
 NVME Initiator Enabled
 XRI Dist lpfc1 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc1 WWPN x100000109bf044b2 WWNN x200000109bf044b2 DID x021b00 ONLINE
-NVME RPORT       WWPN x211bd039eaa7dfc8 WWNN x2119d039eaa7dfc8 DID x022902 TARGET DISCSRVC ONLINE
-NVME RPORT       WWPN x211dd039eaa7dfc8 WWNN x2119d039eaa7dfc8 DID x020102 TARGET DISCSRVC ONLINE
+NVME LPORT lpfc1 WWPN x100000109bf044b2 WWNN x200000109bf044b2 DID x021b00 *ONLINE*
+NVME RPORT       WWPN x211bd039eaa7dfc8 WWNN x2119d039eaa7dfc8 DID x022902 *TARGET DISCSRVC ONLINE*
+NVME RPORT       WWPN x211dd039eaa7dfc8 WWNN x2119d039eaa7dfc8 DID x020102 *TARGET DISCSRVC ONLINE*
 
 NVME Statistics
 LS: Xmt 00000001ff Cmpl 00000001ff Abort 00000000
@@ -230,43 +278,54 @@ LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
 Total FCP Cmpl 00000000012ec220 Issue 00000000012ec222 OutIO 0000000000000002
         abort 0000033b noxri 00000000 nondlp 00000085 qdepth 00000000 wqerr 00000000 err 00000000
 FCP CMPL: xb 00000368 Err 00000382
-
 ----
-
-
+====
 --
-
-.Marvell/QLogic FC Adapter for NVMe/FC
+.Marvell/QLogic
 --
-
-The native inbox qla2xxx driver included in the RHEL 8.10 GA kernel has the latest upstream fixes. These fixes are essential for ONTAP support.
+Configure NVMe/FC for a Marvell/QLogic adapter.
 
 .Steps
 
-.  Verify that you are running the supported adapter driver and firmware versions:
+. Verify that you are using the supported adapter model, driver, and firmware versions:
 +
+[source,cli]
 ----
-# cat /sys/class/fc_host/host*/symbolic_name
+cat /sys/class/fc_host/host*/symbolic_name
 ----
 +
-*Example output*
+The follow example shows driver and firmware versions:
 +
 ----
 QLE2742 FW: v9.10.11 DVR: v10.02.08.200-k
 QLE2742 FW: v9.10.11 DVR: v10.02.08.200-k
+----
+
+. Verify that the recommended inbox qla2xxx driver is loaded:
++
+[source,cli]
+----
+cat /sys/module/qla2xxx/version
+----
++
+You should see the following output:
++
+----
+The driver version included in the RHEL 8.10 kernel.
 ----
 
 . Verify that `ql2xnvmeenable` is set. This enables the Marvell adapter to function as an NVMe/FC initiator:
 +
+[source,cli]
 ----
-# cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
-1
+cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
 ----
-
++
+The expected ouptut is 1.
 --
-====
+=====
 
-== Step 4: Optionally, enable 1MB I/O 
+== Step 3: Optionally, enable 1MB I/O 
 
 include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[]
 
@@ -295,7 +354,7 @@ subtype: unrecognized
 treq:    not specified.
 portid:  0
 trsvcid: 8009
-subnqn:  nqn.1992-08.com.netapp:sn.a1b2b785b9de11ee8e7fd039ea9e8ae9:discovery: discovery
+subnqn:  nqn.1992-08.com.netapp:sn.a1b2b785b9de11ee8e7fd039ea9e8ae9:discovery
 traddr:  192.168.1.25
 sectype: none
 =====Discovery Log Entry 1======
@@ -488,7 +547,7 @@ NSID       UUID                                   Size
 --
 ====
 
-== Step 5: Review the known issues
+== Step 4: Review the known issues
 
 The NVMe-oF host configuration for RHEL 8.10 with ONTAP has the following known issue:
 
