--- a/nvme-rhel-82.adoc
+++ b/nvme-rhel-82.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_82.html
+permalink: nvme-rhel-82.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe/FC Host for RHEL 8.2 with ONTAP
 ---
