--- a/nvme-rhel-89.adoc
+++ b/nvme-rhel-89.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_88.html
+permalink: nvme-rhel-89.html
 keywords: nvme, linux, rhel, red hat, enterprise
-summary: How to Configure NVMe-oF Host for RHEL 8.8 with ONTAP
+summary: How to Configure NVMe-oF Host for RHEL 8.9 with ONTAP
 ---
-= Configure RHEL 8.8 for NVMe-oF with ONTAP storage
+= Configure RHEL 8.9 for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -16,7 +16,7 @@ summary: How to Configure NVMe-oF Host for RHEL 8.8 with ONTAP
 include::_include/nvme/nvme-introduction.adoc[]
 
 .About this task 
-You can use the following support and features with the NVMe-oF host configuration for Red Hat Enterprise Linux (RHEL) 8.8. You should also review the known limitations before starting the configuration process.
+You can use the following support and features with the NVMe-oF host configuration for Red Hat Enterprise Linux (RHEL) 8.9. You should also review the known limitations before starting the configuration process.
 
 * Support available:
 ** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe/FC. The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
@@ -25,8 +25,8 @@ For additional details on supported configurations, see the link:https://mysuppo
 * Features available:
 ** There are no new features in this release.
 * Known limitations: 
-** In-kernel NVMe multipath is disabled by default on NVMe-oF hosts in RHEL 8.8, so you must enable it manually.
-** On RHEL 8.8 hosts, NVMe/TCP is a technology preview feature due to known issues.
+** In-kernel NVMe multipath is disabled by default on NVMe-oF hosts in RHEL 8.9, so you must enable it manually.
+** On RHEL 8.9 hosts, NVMe/TCP is a technology preview feature due to known issues.
 ** SAN booting using the NVMe-oF protocol is not currently supported.
 
 == Step 1: Optionally, enable SAN booting
@@ -35,21 +35,21 @@ include::_include/nvme/enable-san-booting.adoc[]
 
 == Step 2: Validate software versions
  
-You can use the following procedure to validate the minimum supported RHEL 8.8 software versions.
+You can use the following procedure to validate the minimum supported RHEL 8.9 software versions.
 
 .Steps
 
-. Install RHEL 8.8 on the server. After the installation is complete, verify that you are running the specified RHEL 8.8 kernel: 
+. Install RHEL 8.9 on the server. After the installation is complete, verify that you are running the specified RHEL 8.9 kernel: 
 +
 [source,cli]
 ----
 uname -r
 ----
 +
-The following example shows a RHEL 8.8 kernel version:
+The following example shows a RHEL 8.9 kernel version:
 +
 ----
-4.18.0-477.10.1.el8_8.x86_64
+4.18.0-513.5.1.el8_9.x86_64
 ----
 
 . Install the `nvme-cli` package:
@@ -62,7 +62,7 @@ rpm -qa|grep nvme-cli
 The following example shows an nvme-cli package version:
 +
 ----
-nvme-cli-1.16-7.el8.x86_64
+nvme-cli-1.16-9.el8.x86_64
 ----
 
 . Install the `libnvme` package:
@@ -82,10 +82,10 @@ libnvme-1.4-3.el8.x86_64
 +
 [source,cli]
 ----
-grubby --args=nvme_core.multipath=Y --update-kernel /boot/vmlinuz-4.18.0-477.10.1.el8_8.x86_64
+grubby --args=nvme_core.multipath=Y --update-kernel /boot/vmlinuz-4.18.0-513.5.1.el8_9.x86_64
 ----
 
-. On the RHEL 8.8 host, check the hostnqn string at `/etc/nvme/hostnqn`:
+. On the RHEL 8.9 host, check the hostnqn string at `/etc/nvme/hostnqn`:
 +
 [source,cli]
 ----
@@ -95,7 +95,7 @@ cat /etc/nvme/hostnqn
 The following example shows an hostnqn version:
 +
 ----
-nqn.2014-08.org.nvmexpress:uuid:f6517cae-3133-11e8-bbff-7ed30aef123f
+nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0032-3410-8035-b8c04f4c5132
 ----
 
 . Verify that the `hostnqn` string matches the `hostnqn` string for the corresponding subsystem on the ONTAP array:
@@ -111,7 +111,7 @@ nqn.2014-08.org.nvmexpress:uuid:f6517cae-3133-11e8-bbff-7ed30aef123f
 ----
 Vserver     Subsystem          Host NQN
 ----------- --------------- ----------------------------------------------------------
-vs_nvme161   rhel_161_LPe32002    nqn.2014-08.org.nvmexpress:uuid:f6517cae-3133-11e8-bbff-7ed30aef123f
+vs_nvme101   rhel_101_QLe2772    nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0032-3410-8035-b8c04f4c5132
 ----
 ====
 +
@@ -122,7 +122,7 @@ If the `hostnqn` strings do not match, use the `vserver modify` command to updat
 
 [NOTE]
 ====
-If you intend to run both NVMe and SCSI co-existent traffic on the same host, NetApp recommends using the in-kernel NVMe multipath for ONTAP namespaces and dm-multipath for ONTAP LUNs respectively. This means that the ONTAP namespaces should be excluded from dm-multipath to prevent dm-multipath from claiming these namespace devices. This can be done by adding the `enable_foreign` setting to the `/etc/multipath.conf` file:	
+If you intend to run both NVMe and SCSI co-existent traffic on the same host, NetApp recommends using the in-kernel NVMe multipath for ONTAP namespaces and dm-multipath for ONTAP LUNs respectively. This should exclude the ONTAP namespaces from dm-multipath and prevent dm-multipath from claiming these namespace devices. You can do this by adding the `enable_foreign` setting to the `/etc/multipath.conf` file:	
 
 ----
 # cat /etc/multipath.conf
@@ -132,9 +132,9 @@ defaults {
 ----
 ====
 
-== Step 3: Configure NVMe/FC
+== Configure NVMe/FC
 
-You can configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters. For NVMe/FC configured with a Broadcom adapter, you can enable I/O requests of size 1MB.
+You can configure NVMe/FC for Broadcom/Emulex or Marvell/Qlogic adapters.
 
 [role="tabbed-block"]
 ====
@@ -170,13 +170,13 @@ Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 +
 ----
 # cat /sys/class/scsi_host/host*/fwrev 
-14.0.639.18, sli-4:2:c
-14.0.639.18, sli-4:2:c
+14.2.539.16, sli-4:2:c
+14.2.539.16, sli-4:2:c
 ----
 +
 ----
 # cat /sys/module/lpfc/version 
-0:14.0.0.18
+0:14.0.0.21
 ----
 +
 For the current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
@@ -192,8 +192,8 @@ For the current list of supported adapter driver and firmware versions, see the 
 +
 ----
 # cat /sys/class/fc_host/host*/port_name
-0x100000109b1c1204
-0x100000109b1c1205
+0x10000090fae0ec88
+0x10000090fae0ec89 
 ----
 +
 ----
@@ -202,30 +202,31 @@ Online
 Online
 ----
 +
+[subs=+quotes]
 ----
-# cat /sys/class/scsi_host/host*/nvme_info NVME Initiator Enabled
+# cat /sys/class/scsi_host/host*/nvme_info 
+NVME Initiator Enabled
 XRI Dist lpfc0 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc0 WWPN x10000090fae0ec88 WWNN x20000090fae0ec88 DID x0a1300 ONLINE
-NVME RPORT       WWPN x2049d039ea36a105 WWNN x2048d039ea36a105 DID x0a0c0a TARGET DISCSRVC ONLINE
-NVME RPORT       WWPN x204bd039ea36a105 WWNN x2048d039ea36a105 DID x0a100a TARGET DISCSRVC ONLINE
+NVME LPORT lpfc0 WWPN x10000090fae0ec88 WWNN x20000090fae0ec88 DID x0a1300 *ONLINE*
+NVME RPORT       WWPN x2049d039ea36a105 WWNN x2048d039ea36a105 DID x0a0c0a *TARGET DISCSRVC ONLINE*
 NVME Statistics
-LS: Xmt 0000000134 Cmpl 0000000134 Abort 00000000
-LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
-Total FCP Cmpl 000000000825e567 Issue 000000000825d7ed OutIO fffffffffffff286
-abort 0000027c noxri 00000000 nondlp 00000a02 qdepth 00000000 wqerr 00000000 err 00000000
-FCP CMPL: xb 00000782 Err 000130fa
-
+LS: Xmt 0000000024 Cmpl 0000000024 Abort 00000000
+LS XMIT: Err 00000000 CMPL: xb 00000000 Err 00000000
+Total FCP Cmpl 00000000000001aa Issue 00000000000001ab OutIO 0000000000000001
+        abort 00000002 noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
+FCP CMPL: xb 00000002 Err 00000003
 NVME Initiator Enabled
 XRI Dist lpfc1 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc1 WWPN x10000090fae0ec89 WWNN x20000090fae0ec89 DID x0a1200 ONLINE
-NVME RPORT       WWPN x204ad039ea36a105 WWNN x2048d039ea36a105 DID x0a080a TARGET DISCSRVC ONLINE
-NVME RPORT       WWPN x204cd039ea36a105 WWNN x2048d039ea36a105 DID x0a090a TARGET DISCSRVC ONLINE
+NVME LPORT lpfc1 WWPN x10000090fae0ec89 WWNN x20000090fae0ec89 DID x0a1200 *ONLINE*
+NVME RPORT       WWPN x204ad039ea36a105 WWNN x2048d039ea36a105 DID x0a080a *TARGET DISCSRVC ONLINE*
 NVME Statistics
-LS: Xmt 0000000134 Cmpl 0000000134 Abort 00000000
-LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
-Total FCP Cmpl 000000000826ced5 Issue 000000000826c226 OutIO fffffffffffff351
-        abort 0000029d noxri 00000000 nondlp 000008df qdepth 00000000 wqerr 00000000 err 00000000
-FCP CMPL: xb 00000821 Err 00012fcd
+LS: Xmt 0000000024 Cmpl 0000000024 Abort 00000000
+LS XMIT: Err 00000000 CMPL: xb 00000000 Err 00000000
+Total FCP Cmpl 00000000000001ac Issue 00000000000001ad OutIO 0000000000000001
+        abort 00000002 noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
+FCP CMPL: xb 00000002 Err 00000003
+
+
 
 ----
 
@@ -234,11 +235,12 @@ FCP CMPL: xb 00000821 Err 00012fcd
 
 .Marvell/QLogic FC Adapter for NVMe/FC
 --
-The native inbox qla2xxx driver included in the RHEL 8.8 GA kernel has the latest upstream fixes. These fixes are essential for ONTAP support. 
+
+The native inbox qla2xxx driver included in the RHEL 8.9 GA kernel has the latest upstream fixes. These fixes are essential for ONTAP support.
 
 .Steps
 
-Verify that you are running the supported adapter driver and firmware versions:
+. Verify that you are running the supported adapter driver and firmware versions:
 +
 ----
 # cat /sys/class/fc_host/host*/symbolic_name
@@ -247,8 +249,8 @@ Verify that you are running the supported adapter driver and firmware versions:
 *Example output*
 +
 ----
-QLE2772 FW:v9.10.11 DVR:v10.02.07.900-k-debug
-QLE2772 FW:v9.10.11 DVR:v10.02.07.900-k-debug
+QLE2742 FW: v9.10.11 DVR: v10.02.08.200-k
+QLE2742 FW: v9.10.11 DVR: v10.02.08.200-k
 ----
 
 . Verify that `ql2xnvmeenable` is set. This enables the Marvell adapter to function as an NVMe/FC initiator:
@@ -261,7 +263,7 @@ QLE2772 FW:v9.10.11 DVR:v10.02.07.900-k-debug
 --
 ====
 
-== Step 4: Optionally, enable 1MB I/O 
+== Step 3: Optionally, enable 1MB I/O 
 
 include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[]
 
@@ -280,40 +282,31 @@ nvme discover -t tcp -w host-traddr -a traddr
 *Example output:*
 +
 ----
-# nvme discover -t tcp -w 192.168.111.79 -a 192.168.111.14
+# nvme discover -t tcp -w 192.168.111.79 -a 192.168.111.14 -l 1800
 
-Discovery Log Number of Records 8, Generation counter 10
+Discovery Log Number of Records 8, Generation counter 18
 =====Discovery Log Entry 0======
 trtype:  tcp
 adrfam:  ipv4
 subtype: unrecognized
-treq:    not specified
+treq:    not specified.
 portid:  0
 trsvcid: 8009
-subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:discovery
+subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b: discovery
 traddr:  192.168.211.15
 sectype: none
 =====Discovery Log Entry 1======
 trtype:  tcp
 adrfam:  ipv4
 subtype: unrecognized
-treq:    not specified
+treq:    not specified.
 portid:  1
 trsvcid: 8009
-subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:discovery
+subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b: discovery
 traddr:  192.168.111.15
-sectype: none
-=====Discovery Log Entry 2======
-trtype:  tcp
-adrfam:  ipv4
-subtype: unrecognized
-treq:    not specified
-portid:  2
-trsvcid: 8009
-subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:discovery
-traddr:  192.168.211.14
-sectype: none
-..........
+sectype: none ..........
+
+
 ----
 
 . Verify that the other NVMe/TCP initiator-target LIF combinations can successfully fetch discovery log page data:
@@ -329,6 +322,8 @@ nvme discover -t tcp -w host-traddr -a traddr
 # nvme	discover	-t   tcp    -w	192.168.111.79   -a	192.168.111.15
 # nvme	discover	-t   tcp    -w	192.168.211.79   -a	192.168.211.14
 # nvme	discover	-t   tcp    -w	192.168.211.79   -a	192.168.211.15
+
+
 ----
 
 . Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes, and set the controller loss timeout period for at least 30 minutes or 1800 seconds:
@@ -344,13 +339,15 @@ nvme connect-all -t tcp -w host-traddr -a traddr -l 1800
 # nvme	connect-all	-t	tcp	-w	192.168.111.79	-a	192.168.111.15	-l	1800
 # nvme	connect-all	-t	tcp	-w	192.168.211.79	-a	192.168.211.14	-l	1800
 # nvme	connect-all	-t	tcp	-w	192.168.211.79	-a	192.168.211.15	-l	1800
+
+
 ----
 
 
 
 == Validate NVMe-oF
 
-You can use the following procedure to validate NVME-oF.
+You can use the following procedure to validate NVMe-oF.
 
 .Steps
 
@@ -386,7 +383,7 @@ round-robin
 ----
 Node         SN                   Model                          
 ---------------------------------------------------------  
-/dev/nvme3n1 81Gx7NSiKSQeAAAAAAAB	NetApp ONTAP Controller	
+/dev/nvme0n1 81Gx7NSiKSQqAAAAAAAB	NetApp ONTAP Controller
                                
 
 Namespace Usage    Format             FW             Rev
@@ -406,14 +403,14 @@ Namespace Usage    Format             FW             Rev
 ----
 
 *Example output:*
-
+[subs=+quotes]
 ----
-nvme-subsys3 - NQN=nqn.1992-08.com.netapp:sn.ab4fa6a5ba8b11ecbe3dd039ea359e4b:subsystem.rhel_161_Lpe32002
-\
- +- nvme0 fc traddr=nn-0x2048d039ea36a105:pn-0x204cd039ea36a105 host_traddr=nn-0x20000090fae0ec89:pn-0x10000090fae0ec89 live non-optimized
- +- nvme1 fc traddr=nn-0x2048d039ea36a105:pn-0x204ad039ea36a105 host_traddr=nn-0x20000090fae0ec89:pn-0x10000090fae0ec89 live optimized
- +- nvme2 fc traddr=nn-0x2048d039ea36a105:pn-0x204bd039ea36a105 host_traddr=nn-0x20000090fae0ec88:pn-0x10000090fae0ec88 live non-optimized
- +- nvme4 fc traddr=nn-0x2048d039ea36a105:pn-0x2049d039ea36a105 host_traddr=nn-0x20000090fae0ec88:pn-0x10000090fae0ec88 live optimized
+nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.8e501f8ebafa11ec9b99d039ea359e4b:subsystem.rhel_163_Qle2742 
++- nvme0 *fc* traddr=nn-0x204dd039ea36a105:pn-0x2050d039ea36a105 host_traddr=nn-0x20000024ff7f4994:pn-0x21000024ff7f4994 *live non-optimized*
++- nvme1 *fc* traddr=nn-0x204dd039ea36a105:pn-0x2050d039ea36a105 host_traddr=nn-0x20000024ff7f4994:pn-0x21000024ff7f4994 *live non-optimized*
++- nvme2 *fc* traddr=nn-0x204dd039ea36a105:pn-0x204fd039ea36a105 host_traddr=nn-0x20000024ff7f4995:pn-0x21000024ff7f4995 *live optimized*
++- nvme3 *fc* traddr=nn-0x204dd039ea36a105:pn-0x204ed039ea36a105 host_traddr=nn-0x20000024ff7f4994:pn-0x21000024ff7f4994 *live optimized* 
+
 ----
 --
 .NVMe/TCP
@@ -423,13 +420,14 @@ nvme-subsys3 - NQN=nqn.1992-08.com.netapp:sn.ab4fa6a5ba8b11ecbe3dd039ea359e4b:su
 ----
 
 *Example output:*
-
+[subs=+quotes]
 ----
-nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:subsystem.rhel_tcp_165
-\
- +- nvme0 tcp traddr=192.168.111.15 trsvcid=4420 host_traddr=192.168.111.79 live non-optimized
- +- nvme1 tcp traddr=192.168.111.14 trsvcid=4420 host_traddr=192.168.111.79 live optimized
- +- nvme2 tcp traddr=192.168.211.15 trsvcid=4420 host_traddr=192.168.211.79 live non-optimized
+nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:subsystem.rhel_tcp_165\
++- nvme0 *tcp* traddr=192.168.111.15 trsvcid=4420 host_traddr=192.168.111.79 *live non-optimized*
++- nvme1 *tcp* traddr=192.168.111.14 trsvcid=4420 host_traddr=192.168.111.79 *live optimized*
++- nvme2 *tcp* traddr=192.168.211.15 trsvcid=4420 host_traddr=192.168.211.79 *live non-optimized*
++- nvme3 *tcp* traddr=192.168.211.14 trsvcid=4420 host_traddr=192.168.211.79 *live optimized*
+
 ----
 --
 ====
@@ -449,13 +447,12 @@ nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:su
 ----
 Device        Vserver   Namespace Path                                                          
 ----------------------- ------------------------------ 
-/dev/nvme0n1 vs_tcp           /vol/vol1/ns1   
+/dev/nvme0n1 vs_tcp79           /vol/vol1/ns
+
               
-
-
 NSID       UUID                                   Size
 ------------------------------------------------------------
-1          338d73ce-b5a8-4847-9cc9-b127c75d8855	21.47GB
+1          aa197984-3f62-4a80-97de-e89436360cec	21.47GB
 ----
 --
 .JSON
@@ -467,35 +464,35 @@ NSID       UUID                                   Size
 *Example output*
 ----
 {
-  "ONTAPdevices" : [
+  "ONTAPdevices”: [
     {
-      "Device" : "/dev/nvme0n1",
-      "Vserver" : "vs_tcp79",
-      "Namespace_Path" : "/vol/vol1/ns1",
-      "NSID" : 1,
-      "UUID" : "338d73ce-b5a8-4847-9cc9-b127c75d8855",
-      "Size" : "21.47GB",
-      "LBA_Data_Size" : 4096,
-      "Namespace_Size" : 5242880
+      "Device”: "/dev/nvme0n1",
+      "Vserver”: "vs_tcp79",
+      "Namespace Path”: "/vol/vol1/ns",
+      "NSID”: 1,
+      "UUID”: "aa197984-3f62-4a80-97de-e89436360cec",
+      "Size”: "21.47GB",
+      "LBA_Data_Size”: 4096,
+      "Namespace Size" : 5242880
     },
 ]
 
 }
 
+
 ----
 --
 ====
 
-== Step 5: Review the known issues
+== Step 4: Review the known issues
 
-The NVMe-oF host configuration for RHEL 8.8 with ONTAP release has the following known issues:
+The NVMe-oF host configuration for RHEL 8.9 with ONTAP release has the following known issues:
 
 [cols="20,40,40",options="header"]
 |===
 |NetApp Bug ID	|Title	|Description
 
-|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1479047[1479047]	|RHEL 8.8 NVMe-oF hosts create duplicate persistent discovery controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can use the "nvme discover -p" command to create Persistent Discovery Controllers (PDCs). When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running Red Hat Enterprise Linux (RHEL) 8.8 on an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.
+|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1479047[1479047^]	|RHEL 8.9 NVMe-oF hosts create duplicate persistent discovery controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can use the "nvme discover -p" command to create Persistent Discovery Controllers (PDCs). When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running Red Hat Enterprise Linux (RHEL) 8.9 on an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.
 |===
 
-// 2022,12-06, Jira IEOPS-690
-// JIRA-1289 20-Sep-2023
+// 2024 SEP 2, ONTAPDOC-2345
