--- a/nvme-rhel-91.adoc
+++ b/nvme-rhel-91.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_91.html
+permalink: nvme-rhel-91.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 9.1 with ONTAP
 ---
@@ -114,119 +114,167 @@ If the `hostnqn` strings do not match, use the `vserver modify` command to updat
 
 == Step 3: Configure NVMe/FC
 
-You can configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters. For NVMe/FC configured with a Broadcom adapter, you can enable I/O requests of size 1MB.
+You can configure NVMe/FC for Broadcom/Emulex or Marvell/Qlogic adapters.
 
 [role="tabbed-block"]
 ====
 .Broadcom/Emulex
 --
+Configure NVMe/FC for a Broadcom/Emulex adapter.
+
 .Steps
 
-.	Verify that you are using the supported adapter. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported adapters.
-+
+. Verify that you are using the supported adapter model:
+
+.. Display the model names:
+[source,cli]
 ----
-# cat /sys/class/scsi_host/host*/modelname
+cat /sys/class/scsi_host/host*/modelname
+----
+You should see the following output:
+----
 LPe32002-M2
 LPe32002-M2
+----
 
-# cat /sys/class/scsi_host/host*/modeldesc
-
+.. Display the model descriptions:
+[source,cli]
+----
+cat /sys/class/scsi_host/host*/modeldesc
+----
+You should see an output similar to the following example:
+----
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
- 
 ----
-+
 
-.	Verify that you are using the recommended Broadcom lpfc firmware and inbox driver. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported adapter driver and firmware versions.
-+
+. Verify that you are using the recommended Broadcom `lpfc` firmware and inbox driver:
+
+.. Display the firmware version:
+[source,cli]
 ----
-# cat /sys/class/scsi_host/host*/fwrev
+cat /sys/class/scsi_host/host*/fwrev
+----
+The following example shows firmware versions:
+----
 14.0.505.11, sli-4:2:c
 14.0.505.11, sli-4:2:c
 ----
-+
+
+.. Display the inbox driver version:
+[source,cli]
 ----
-# cat /sys/module/lpfc/version
+cat /sys/module/lpfc/version
+----
+The following example shows a driver version:
+----
 0:14.2.0.5
 ----
 
+For the current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
-.	Verify that `lpfc_enable_fc4_type` is set to 3
-+
+. Verify that the expected output of `lpfc_enable_fc4_type` is set to `3`:
+[source,cli]
 ----
-# cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
+cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
+----
+The expected output is:
+----
 3
-
 ----
-+
 
-.	Verify that the initiator ports are up and running, and that you can see the target LIFs.
-+
+. Verify that you can view your initiator ports:
+[source,cli]
 ----
-# cat /sys/class/fc_host/host*/port_name
+cat /sys/class/fc_host/host*/port_name
+----
+You should see the following output:
+----
 0x100000109b1b95ef
 0x100000109b1b95f0
 ----
-+
+
+. Verify that your initiator ports are online:
+[source,cli]
 ----
-# cat /sys/class/fc_host/host*/port_state
+cat /sys/class/fc_host/host*/port_state
+----
+You should see the following output:
+----
 Online
 Online
 ----
-+
+
+. Verify that the NVMe/FC initiator ports are enabled and that the target ports are visible:
+[source,cli]
 ----
-# cat /sys/class/scsi_host/host*/nvme_info
+cat /sys/class/scsi_host/host*/nvme_info
+----
+.Show example
+[%collapsible]
+=====
+[subs=+quotes]
+----
 NVME Initiator Enabled
 XRI Dist lpfc0 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc0 WWPN x100000109b1b95ef WWNN x200000109b1b95ef DID x061700 ONLINE
-NVME RPORT       WWPN x2035d039ea1308e5 WWNN x2082d039ea1308e5 DID x062f05 TARGET DISCSRVC ONLINE
-NVME RPORT       WWPN x2083d039ea1308e5 WWNN x2082d039ea1308e5 DID x062407 TARGET DISCSRVC ONLINE
+NVME LPORT lpfc0 WWPN x100000109b1b95ef WWNN x200000109b1b95ef DID x061700 *ONLINE*
+NVME RPORT       WWPN x2035d039ea1308e5 WWNN x2082d039ea1308e5 DID x062f05 *TARGET DISCSRVC ONLINE*
+NVME RPORT       WWPN x2083d039ea1308e5 WWNN x2082d039ea1308e5 DID x062407 *TARGET DISCSRVC ONLINE*
 
 NVME Statistics
 LS: Xmt 000000000e Cmpl 000000000e Abort 00000000
 LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
 Total FCP Cmpl 000000000001df6c Issue 000000000001df6e OutIO 0000000000000002
-        abort 00000000 noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
+  abort 00000000 noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
 FCP CMPL: xb 00000000 Err 00000004
 
 NVME Initiator Enabled
 XRI Dist lpfc1 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc1 WWPN x100000109b1b95f0 WWNN x200000109b1b95f0 DID x061400 ONLINE
-NVME RPORT       WWPN x2036d039ea1308e5 WWNN x2082d039ea1308e5 DID x061605 TARGET DISCSRVC ONLINE
-NVME RPORT       WWPN x2037d039ea1308e5 WWNN x2082d039ea1308e5 DID x062007 TARGET DISCSRVC ONLINE
+NVME LPORT lpfc1 WWPN x100000109b1b95f0 WWNN x200000109b1b95f0 DID x061400 *ONLINE*
+NVME RPORT       WWPN x2036d039ea1308e5 WWNN x2082d039ea1308e5 DID x061605 *TARGET DISCSRVC ONLINE*
+NVME RPORT       WWPN x2037d039ea1308e5 WWNN x2082d039ea1308e5 DID x062007 *TARGET DISCSRVC ONLINE*
 
 NVME Statistics
 LS: Xmt 000000000e Cmpl 000000000e Abort 00000000
 LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
 Total FCP Cmpl 000000000001dd28 Issue 000000000001dd29 OutIO 0000000000000001
-        abort 00000000 noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
+  abort 00000000 noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
 FCP CMPL: xb 00000000 Err 00000004
-
 ----
+=====
 --
-
-.Marvell/QLogic FC adapter for NVMe/FC
+.Marvell/QLogic
 --
-The native inbox `qla2xxx` driver included in the RHEL 9.1 kernel has the latest fixes which are. These fixes are essential for ONTAP support.
+Configure NVMe/FC for a Marvell/QLogic adapter.
 
 .Steps
 
-. Verify that you are running the supported adapter driver and firmware versions using the following command:
-
-+
-
+. Verify that you are using the supported adapter model, driver, and firmware versions:
+[source,cli]
 ----
-# cat /sys/class/fc_host/host*/symbolic_name 
-QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug 
-QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug 
+cat /sys/class/fc_host/host*/symbolic_name
+----
+You should see output similar to:
+----
+QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug
+QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug
 ----
 
-. Verify `ql2xnvmeenable` is set which enables the Marvell adapter to function as an NVMe/FC initiator using the following command:
-
-+
+. Verify that the recommended inbox `qla2xxx` driver is loaded:
+[source,cli]
 ----
-# cat /sys/module/qla2xxx/parameters/ql2xnvmeenable 
-1 
+cat /sys/module/qla2xxx/version
+----
+The expected output is the driver version included in the RHEL 9.1 kernel.
+
+. Verify that `ql2xnvmeenable` is set to enable NVMe/FC initiator functionality:
+[source,cli]
+----
+cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
+----
+Expected output:
+----
+1
 ----
 --
 ====
@@ -251,34 +299,23 @@ trtype: tcp
 adrfam: ipv4
 subtype: nvme subsystem
 treq: not specified
-portid: 0
 trsvcid: 4420
-subnqn: nqn.1992-08.com.netapp:sn.56e362e9bb4f11ebbaded039ea165abc:subsystem.nvme_118_tcp_1
 traddr: 192.168.2.56
-sectype: none
 =====Discovery Log Entry 1======
-trtype: tcp
+ 
 adrfam: ipv4
-subtype: nvme subsystem
 treq: not specified
-portid: 1
+ 
 trsvcid: 4420
-subnqn: nqn.1992-08.com.netapp:sn.56e362e9bb4f11ebbaded039ea165abc:subsystem.nvme_118_tcp_1
 traddr: 192.168.1.51
 sectype: none
-=====Discovery Log Entry 2======
-trtype: tcp
 adrfam: ipv4
-subtype: nvme subsystem
+ 
 treq: not specified
-portid: 0
 trsvcid: 4420
-subnqn: nqn.1992-08.com.netapp:sn.56e362e9bb4f11ebbaded039ea165abc:subsystem.nvme_118_tcp_2
+ 
 traddr: 192.168.2.56
-sectype: none
 ...
-----
-
 .	Verify that the other NVMe/TCP initiator-target LIF combos can successfully fetch discovery log page data. For example:
 +
 ----
@@ -432,7 +469,7 @@ NSID UUID                                   Size
 }
 ----
 
-== Step 5: Review the known issues
+== Step 4: Review the known issues
 
 The NVMe-oF host configuration for RHEL 9.1 with ONTAP has the following known issues:
 
