--- a/nvme-rhel-92.adoc
+++ b/nvme-rhel-92.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_92.html
+permalink: nvme-rhel-92.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 9.2 with ONTAP
 ---
@@ -114,90 +114,126 @@ If the `hostnqn` strings do not match, use the `vserver modify` command to updat
 
 == Step 3: Configure NVMe/FC
 
-You can configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters. For NVMe/FC configured with a Broadcom adapter, you can enable I/O requests of size 1MB.
+You can configure NVMe/FC for Broadcom/Emulex or Marvell/Qlogic adapters.
 
 [role="tabbed-block"]
 ====
 .Broadcom/Emulex
 --
+Configure NVMe/FC for a Broadcom/Emulex adapter.
+
 .Steps
 
-. Verify that you are using the supported adapter model. 
-+
+. Verify that you are using the supported adapter model:
+
+.. Display the model names:
+[source,cli]
 ----
-# cat /sys/class/scsi_host/host*/modelname
+cat /sys/class/scsi_host/host*/modelname
 ----
-+
-*Example output:*
-+
+You should see the following output:
 ----
 LPe32002-M2
 LPe32002-M2
 ----
-+
+
+.. Display the model descriptions:
+[source,cli]
 ----
-# cat /sys/class/scsi_host/host*/modeldesc
+cat /sys/class/scsi_host/host*/modeldesc
 ----
-+
-*Example output:*
-+
+You should see an output similar to the following example:
 ----
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 ----
 
-. Verify that you are using the recommended Broadcom `lpfc` firmware and inbox driver. 
-+
-----
-# cat /sys/class/scsi_host/host*/fwrev
-14.0.639.18, sli-4:2:c
-14.0.639.18, sli-4:2:c
+. Verify that you are using the recommended Broadcom `lpfc` firmware and inbox driver:
 
-# cat /sys/module/lpfc/version
+.. Display the firmware version:
+[source,cli]
+----
+cat /sys/class/scsi_host/host*/fwrev
+----
+The following example shows firmware versions:
+----
+14.0.639.18, sli-4:2:c
+14.0.639.18, sli-4:2:c
+----
+
+.. Display the inbox driver version:
+[source,cli]
+----
+cat /sys/module/lpfc/version
+----
+The following example shows a driver version:
+----
 0:12.8.0.11
 ----
-+
+
 For the current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
-. Verify that `lpfc_enable_fc4_type` is set to `3`:
-+
+. Verify that the expected output of `lpfc_enable_fc4_type` is set to `3`:
+[source,cli]
 ----
-# cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
+cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
+----
+The expected output is:
+----
 3
 ----
 
-. Verify that the initiator ports are up and running and that you can see the target LIFs:
-+
+. Verify that you can view your initiator ports:
+[source,cli]
 ----
-# cat /sys/class/fc_host/host*/port_name
+cat /sys/class/fc_host/host*/port_name
+----
+You should see the following output:
+----
 0x100000109b1c1204
 0x100000109b1c1205
 ----
-+
+
+. Verify that your initiator ports are online:
+[source,cli]
 ----
-# cat /sys/class/fc_host/host*/port_state
+cat /sys/class/fc_host/host*/port_state
+----
+You should see the following output:
+----
 Online
 Online
 ----
-+
+
+. Verify that the NVMe/FC initiator ports are enabled and that the target ports are visible:
+[source,cli]
 ----
-# cat /sys/class/scsi_host/host*/nvme_info
+cat /sys/class/scsi_host/host*/nvme_info
+----
+.Show example
+[%collapsible]
+=====
+[subs=+quotes]
+----
 NVME Initiator Enabled
 XRI Dist lpfc0 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc0 WWPN x100000109b1c1204 WWNN x200000109b1c1204 DID x011d00 ONLINE
-NVME RPORT WWPN x203800a098dfdd91 WWNN x203700a098dfdd91 DID x010c07 TARGET DISCSRVC ONLINE
-NVME RPORT WWPN x203900a098dfdd91 WWNN x203700a098dfdd91 DID x011507 TARGET DISCSRVC ONLINE
+NVME LPORT lpfc0 WWPN x100000109b1c1204 WWNN x200000109b1c1204 DID x011d00 *ONLINE*
+NVME RPORT WWPN x203800a098dfdd91 WWNN x203700a098dfdd91 DID x010c07 *TARGET DISCSRVC ONLINE*
+NVME RPORT WWPN x203900a098dfdd91 WWNN x203700a098dfdd91 DID x011507 *TARGET DISCSRVC ONLINE*
+
 NVME Statistics
 LS: Xmt 0000000f78 Cmpl 0000000f78 Abort 00000000
 LS XMIT: Err 00000000 CMPL: xb 00000000 Err 00000000
 Total FCP Cmpl 000000002fe29bba Issue 000000002fe29bc4 OutIO 000000000000000a
 abort 00001bc7 noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
 FCP CMPL: xb 00001e15 Err 0000d906
+
 NVME Initiator Enabled
 XRI Dist lpfc1 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc1 WWPN x100000109b1c1205 WWNN x200000109b1c1205 DID x011900 ONLINE
-NVME RPORT WWPN x203d00a098dfdd91 WWNN x203700a098dfdd91 DID x010007 TARGET DISCSRVC ONLINE
-NVME RPORT WWPN x203a00a098dfdd91 WWNN x203700a098dfdd91 DID x012a07 TARGET DISCSRVC ONLINE
+NVME LPORT lpfc1 WWPN x100000109b1c1205 WWNN x200000109b1c1205 DID x011900 *ONLINE*
+NVME RPORT WWPN x203d00a098dfdd91 WWNN x203700a098dfdd91 DID x010007 *TARGET DISCSRVC ONLINE*
+NVME RPORT WWPN x203a00a098dfdd91 WWNN x203700a098dfdd91 DID x012a07 *TARGET DISCSRVC ONLINE*
+
 NVME Statistics
 LS: Xmt 0000000fa8 Cmpl 0000000fa8 Abort 00000000
 LS XMIT: Err 00000000 CMPL: xb 00000000 Err 00000000
@@ -205,37 +241,35 @@ Total FCP Cmpl 000000002e14f170 Issue 000000002e14f17a OutIO 000000000000000a
 abort 000016bb noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
 FCP CMPL: xb 00001f50 Err 0000d9f8
 ----
-
-
+=====
 --
 
-.Marvell/QLogic FC Adapter for NVMe/FC
+.Marvell/QLogic
 --
-
-The native inbox qla2xxx driver included in the RHEL 9.2 GA kernel has the latest upstream fixes. These fixes are essential for ONTAP support. 
+Configure NVMe/FC for a Marvell/QLogic adapter.
 
 .Steps
 
 . Verify that you are running the supported adapter driver and firmware versions:
-+
+[source,cli]
 ----
-# cat /sys/class/fc_host/host*/symbolic_name
+cat /sys/class/fc_host/host*/symbolic_name
 ----
-+
-*Example output*
-+
+The following example shows driver and firmware versions:
 ----
 QLE2742 FW:v9.08.02 DVR:v10.02.00.106-k
 QLE2742 FW:v9.08.02 DVR:v10.02.00.106-k
 ----
 
 . Verify that `ql2xnvmeenable` is set. This enables the Marvell adapter to function as an NVMe/FC initiator:
-+
+[source,cli]
 ----
-# cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
+cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
+----
+The expected output is:
+----
 1
 ----
-
 --
 ====
 
@@ -471,7 +505,7 @@ NSID       UUID                                   Size
 --
 ====
 
-== Step 5: Review the known issues
+== Step 7: Review the known issues
 
 There are no known issues.
 
