--- a/nvme-rhel-93.adoc
+++ b/nvme-rhel-93.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_93.html
+permalink: nvme-rhel-93.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 9.3 with ONTAP
 ---
@@ -122,123 +122,152 @@ You can configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters.
 --
 .Steps
 
-. Verify that you are using the supported adapter model: 
-+
+. Verify that you are using the supported adapter model:
+
+.. Display the model names:
+[source,cli]
 ----
-# cat /sys/class/scsi_host/host*/modelname
+cat /sys/class/scsi_host/host*/modelname
 ----
-+
-*Example output:*
-+
+You should see the following output:
 ----
 LPe32002-M2
 LPe32002-M2
 ----
-+
+        
+.. Display the model descriptions:
+[source,cli]
 ----
-# cat /sys/class/scsi_host/host*/modeldesc
+cat /sys/class/scsi_host/host*/modeldesc
 ----
-+
-*Example output:*
-+
+You should see an output similar to the following example:
 ----
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 ----
-
-. Verify that you are using the recommended Broadcom `lpfc` firmware and inbox driver: 
-+
+        
+. Verify that you are using the recommended Broadcom `lpfc` firmware and inbox driver:
+        
+.. Display the firmware version:
+[source,cli]
 ----
-# cat /sys/class/scsi_host/host*/fwrev
+cat /sys/class/scsi_host/host*/fwrev
+----
+The following example shows firmware versions:
+----
 14.2.539.16, sli-4:2:c
 14.2.539.16, sli-4:2:c
-
-# cat /sys/module/lpfc/version
+----
+        
+.. Display the inbox driver version:
+[source,cli]
+----
+cat /sys/module/lpfc/version
+----
+The following example shows a driver version:
+----
 0:14.2.0.12
 ----
-+
+        
 For the current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
-
-. Verify that `lpfc_enable_fc4_type` is set to `3`:
-+
+        
+. Verify that the expected output of `lpfc_enable_fc4_type` is set to `3`:
+[source,cli]
 ----
-# cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
+cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
+----
+The expected output is:
+----
 3
 ----
-
-. Verify that the initiator ports are up and running and that you can see the target LIFs:
-+
+        
+. Verify that you can view your initiator ports:
+[source,cli]
 ----
-# cat /sys/class/fc_host/host*/port_name
+cat /sys/class/fc_host/host*/port_name
+----
+You should see the following output:
+----
 0x100000109b3c081f
 0x100000109b3c0820
-
 ----
-+
+        
+. Verify that your initiator ports are online:
+[source,cli]
 ----
-# cat /sys/class/fc_host/host*/port_state
+cat /sys/class/fc_host/host*/port_state
+----
+You should see the following output:
+----
 Online
 Online
 ----
-+
+        
+. Verify that the NVMe/FC initiator ports are enabled and that the target ports are visible:
+[source,cli]
+----
+cat /sys/class/scsi_host/host*/nvme_info
+----
+.Show example
+[%collapsible]
+=====
 [subs=+quotes]
 ----
-# cat /sys/class/scsi_host/host*/nvme_info 
 NVME Initiator Enabled
 XRI Dist lpfc0 Total 6144 IO 5894 ELS 250
 NVME LPORT lpfc0 WWPN x100000109b3c081f WWNN x200000109b3c081f DID x062300 *ONLINE*
 NVME RPORT       WWPN x2143d039ea165877 WWNN x2142d039ea165877 DID x061b15 *TARGET DISCSRVC ONLINE*
 NVME RPORT       WWPN x2145d039ea165877 WWNN x2142d039ea165877 DID x061115 *TARGET DISCSRVC ONLINE*
+
 NVME Statistics
 LS: Xmt 000000040b Cmpl 000000040b Abort 00000000
 LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
 Total FCP Cmpl 000000001f5c4538 Issue 000000001f58da22 OutIO fffffffffffc94ea
 abort 00000630 noxri 00000000 nondlp 00001071 qdepth 00000000 wqerr 00000000 err 00000000
 FCP CMPL: xb 00000630 Err 0001bd4a
+
 NVME Initiator Enabled
 XRI Dist lpfc1 Total 6144 IO 5894 ELS 250
 NVME LPORT lpfc1 WWPN x100000109b3c0820 WWNN x200000109b3c0820 DID x062c00 *ONLINE*
 NVME RPORT       WWPN x2144d039ea165877 WWNN x2142d039ea165877 DID x060215 *TARGET DISCSRVC ONLINE*
 NVME RPORT       WWPN x2146d039ea165877 WWNN x2142d039ea165877 DID x061815 *TARGET DISCSRVC ONLINE*
+
 NVME Statistics
 LS: Xmt 000000040b Cmpl 000000040b Abort 00000000
 LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
 Total FCP Cmpl 000000001f5c3618 Issue 000000001f5967a4 OutIO fffffffffffd318c
 abort 00000629 noxri 00000000 nondlp 0000044e qdepth 00000000 wqerr 00000000 err 00000000
 FCP CMPL: xb 00000629 Err 0001bd3d
-
 ----
-
+=====
 
 --
-
-.Marvell/QLogic FC Adapter for NVMe/FC
+.Marvell/QLogic 
 --
-
-The native inbox qla2xxx driver included in the RHEL 9.3 GA kernel has the latest fixes. These fixes are essential for ONTAP support. 
+Configure NVMe/FC for a Marvell/QLogic adapter.
 
 .Steps
 
 . Verify that you are running the supported adapter driver and firmware versions:
-+
+[source,cli]
 ----
-# cat /sys/class/fc_host/host*/symbolic_name
+cat /sys/class/fc_host/host*/symbolic_name
 ----
-+
-*Example output*
-+
+The following example shows driver and firmware versions:
 ----
 QLE2772 FW:v9.10.11 DVR:v10.02.08.200-k
 QLE2772 FW:v9.10.11 DVR:v10.02.08.200-k
 ----
 
 . Verify that `ql2xnvmeenable` is set. This enables the Marvell adapter to function as an NVMe/FC initiator:
-+
+[source,cli]
 ----
-# cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
+cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
+----
+The expected output is:
+----
 1
 ----
-
 --
 ====
 
@@ -491,7 +520,7 @@ NSID       UUID                                   Size
 --
 ====
 
-== Step 5: Review the known issues
+== Step 7: Review the known issues
 
 There are no known issues.
 
