--- a/nvme-rhel-87.adoc
+++ b/nvme-rhel-87.adoc
@@ -136,105 +136,164 @@ Restart the multipathd daemon by running a `systemctl restart multipathd` comman
 
 
 == Configure NVMe/FC
-You can configure NVMe/FC for Broadcom/Emulex or Marvell/Qlogic adapters.
+
+You can configure NVMe/FC for Broadcom/Emulex or Marvell/QLogic adapters.
 
 [role="tabbed-block"]
 ====
 .Broadcom/Emulex
 --
-.Steps
-
-.	Verify that you are using the supported adapter. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported adapters.
-+
-----
-# cat /sys/class/scsi_host/host*/modelname 
-LPe35002-M2 
-LPe35002-M2 
-# cat /sys/class/scsi_host/host*/modeldesc 
-Emulex LightPulse LPe35002-M2 2-Port 32Gb Fibre Channel Adapter 
-Emulex LightPulse LPe35002-M2 2-Port 32Gb Fibre Channel Adapter 
-----
-+
-
-.	Verify that you are using the recommended Broadcom lpfc firmware and inbox driver. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported adapter driver and firmware versions.
-+
-----
-# cat /sys/class/scsi_host/host*/fwrev 
-14.0.505.12, sli-4:6:d  
-14.0.505.12, sli-4:6:d  
-# cat /sys/module/lpfc/version 
-0:14.0.0.15 
-----
-+
-
-.	Verify that `lpfc_enable_fc4_type` is set to 3
-+
-----
-# cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type 
-3 
-----
-+
-
-.	Verify that the initiator ports are up and running, and that you can see the target LIFs.
-+
-----
-# cat /sys/class/fc_host/host*/port_name 
-0x100000109b95467c 
-0x100000109b95467b 
-# cat /sys/class/fc_host/host*/port_state 
-Online 
-Online 
-# cat /sys/class/scsi_host/host*/nvme_info 
-NVME Initiator Enabled 
-XRI Dist lpfc1 Total 6144 IO 5894 ELS 250  
-NVME LPORT lpfc1 WWPN x100000109b95467c WWNN x200000109b95467c DID x0a1500 ONLINE 
-NVME RPORT       WWPN x2071d039ea36a105 WWNN x206ed039ea36a105 DID x0a0907 TARGET DISCSRVC ONLINE 
-NVME RPORT       WWPN x2072d039ea36a105 WWNN x206ed039ea36a105 DID x0a0805 TARGET DISCSRVC ONLINE 
-
-NVME Statistics 
-LS: Xmt 00000001c7 Cmpl 00000001c7 Abort 00000000  
-LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000 
-Total FCP Cmpl 0000000004909837 Issue 0000000004908cfc OutIO fffffffffffff4c5 
-abort 0000004a noxri 00000000 nondlp 00000458 qdepth 00000000 wqerr 00000000 err 00000000 
-FCP CMPL: xb 00000061 Err 00017f43 
-
-NVME Initiator Enabled 
-XRI Dist lpfc0 Total 6144 IO 5894 ELS 250  
-NVME LPORT lpfc0 WWPN x100000109b95467b WWNN x200000109b95467b DID x0a1100 ONLINE 
-NVME RPORT       WWPN x2070d039ea36a105 WWNN x206ed039ea36a105 DID x0a1007 TARGET DISCSRVC ONLINE 
-NVME RPORT       WWPN x206fd039ea36a105 WWNN x206ed039ea36a105 DID x0a0c05 TARGET DISCSRVC ONLINE 
-
-NVME Statistics 
-LS: Xmt 00000001c7 Cmpl 00000001c7 Abort 00000000 
-LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000 
-Total FCP Cmpl 0000000004909464 Issue 0000000004908531 OutIO fffffffffffff0cd 
-abort 0000004f noxri 00000000 nondlp 00000361 qdepth 00000000 wqerr 00000000 err 00000000  
-FCP CMPL: xb 0000006b Err 00017f99 
-----
---
-
-.Marvell/QLogic FC adapter for NVMe/FC
---
-
-The native inbox `qla2xxx` driver included in the RHEL 8.7 kernel has the latest fixes. These fixes are essential for ONTAP support.
+Configure NVMe/FC for a Broadcom/Emulex adapter.
 
 .Steps
-. Verify that you are running the supported adapter driver and firmware versions using the following command:
 
-+
-
+. Verify that you are using the supported adapter model:
+[source,cli]
 ----
-# cat /sys/class/fc_host/host*/symbolic_name 
-QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug 
-QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug 
+cat /sys/class/scsi_host/host*/modelname
+----
+You should see output similar to:
+----
+LPe35002-M2
+LPe35002-M2
 ----
 
-. Verify `ql2xnvmeenable` is set, which enables the Marvell adapter to function as a NVMe/FC initiator using the following command:
-
-+
+. Display the model descriptions:
+[source,cli]
 ----
-# cat /sys/module/qla2xxx/parameters/ql2xnvmeenable 
-1 
+cat /sys/class/scsi_host/host*/modeldesc
+----
+You should see output similar to:
+----
+Emulex LightPulse LPe35002-M2 2-Port 32Gb Fibre Channel Adapter
+Emulex LightPulse LPe35002-M2 2-Port 32Gb Fibre Channel Adapter
+----
+
+. Display the firmware version:
+[source,cli]
+----
+cat /sys/class/scsi_host/host*/fwrev
+----
+The following example shows firmware versions:
+----
+14.0.505.12, sli-4:6:d
+14.0.505.12, sli-4:6:d
+----
+
+. Display the inbox driver version:
+[source,cli]
+----
+cat /sys/module/lpfc/version
+----
+The following example shows a driver version:
+----
+0:14.0.0.15
+----
+
+For the current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
+
+. Verify that the expected output of lpfc_enable_fc4_type is set to 3:
+[source,cli]
+----
+cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
+----
+Expected output:
+----
+3
+----
+
+. Verify that you can view your initiator ports:
+[source,cli]
+----
+cat /sys/class/fc_host/host*/port_name
+----
+You should see output similar to:
+----
+0x100000109b95467c
+0x100000109b95467b
+----
+
+. Verify that your initiator ports are online:
+[source,cli]
+----
+cat /sys/class/fc_host/host*/port_state
+----
+Expected output:
+----
+Online
+Online
+----
+
+. Verify that the NVMe/FC initiator ports are enabled and that the target ports are visible:
+[source,cli]
+----
+cat /sys/class/scsi_host/host*/nvme_info
+----
+.Show example
+[%collapsible]
+=====
+[subs=+quotes]
+----
+NVME Initiator Enabled
+XRI Dist lpfc1 Total 6144 IO 5894 ELS 250
+NVME LPORT lpfc1 WWPN x100000109b95467c WWNN x200000109b95467c DID x0a1500 ONLINE
+NVME RPORT       WWPN x2071d039ea36a105 WWNN x206ed039ea36a105 DID x0a0907 TARGET DISCSRVC ONLINE
+NVME RPORT       WWPN x2072d039ea36a105 WWNN x206ed039ea36a105 DID x0a0805 TARGET DISCSRVC ONLINE
+
+NVME Statistics
+LS: Xmt 00000001c7 Cmpl 00000001c7 Abort 00000000
+LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
+Total FCP Cmpl 0000000004909837 Issue 0000000004908cfc OutIO fffffffffffff4c5
+abort 0000004a noxri 00000000 nondlp 00000458 qdepth 00000000 wqerr 00000000 err 00000000
+FCP CMPL: xb 00000061 Err 00017f43
+
+NVME Initiator Enabled
+XRI Dist lpfc0 Total 6144 IO 5894 ELS 250
+NVME LPORT lpfc0 WWPN x100000109b95467b WWNN x200000109b95467b DID x0a1100 ONLINE
+NVME RPORT       WWPN x2070d039ea36a105 WWNN x206ed039ea36a105 DID x0a1007 TARGET DISCSRVC ONLINE
+NVME RPORT       WWPN x206fd039ea36a105 WWNN x206ed039ea36a105 DID x0a0c05 TARGET DISCSRVC ONLINE
+
+NVME Statistics
+LS: Xmt 00000001c7 Cmpl 00000001c7 Abort 00000000
+LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
+Total FCP Cmpl 0000000004909464 Issue 0000000004908531 OutIO fffffffffffff0cd
+abort 0000004f noxri 00000000 nondlp 00000361 qdepth 00000000 wqerr 00000000 err 00000000
+FCP CMPL: xb 0000006b Err 00017f99
+----
+=====
+--
+.Marvell/QLogic
+--
+Configure NVMe/FC for a Marvell/QLogic adapter.
+
+.Steps
+
+. Verify that you are using the supported adapter model, driver, and firmware versions:
+[source,cli]
+----
+cat /sys/class/fc_host/host*/symbolic_name
+----
+You should see output similar to:
+----
+QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug
+QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug
+----
+
+. Verify that the recommended inbox qla2xxx driver is loaded:
+[source,cli]
+----
+cat /sys/module/qla2xxx/version
+----
+The expected output is the driver version included in the RHEL 8.7 kernel.
+
+. Verify that ql2xnvmeenable is set to enable NVMe/FC initiator functionality:
+[source,cli]
+----
+cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
+----
+Expected output:
+----
+1
 ----
 --
 ====
