--- a/nvme-rhel-89.adoc
+++ b/nvme-rhel-89.adoc
@@ -132,136 +132,195 @@ defaults {
 ----
 ====
 
-== Configure NVMe/FC
+== Step 3: Configure NVMe/FC
 
 You can configure NVMe/FC for Broadcom/Emulex or Marvell/Qlogic adapters.
 
 [role="tabbed-block"]
-====
+=====
 .Broadcom/Emulex
 --
+Configure NVMe/FC for a Broadcom/Emulex adapter.
+
 .Steps
 
-. Verify that you are using the supported adapter model: 
+. Verify that you are using the supported adapter model:
+
+.. Display the model names:
 +
+[source,cli]
 ----
-# cat /sys/class/scsi_host/host*/modelname
+cat /sys/class/scsi_host/host*/modelname
 ----
 +
-*Example output:*
+You should see output similar to:
 +
 ----
 LPe32002-M2
 LPe32002-M2
 ----
+
+.. Display the model descriptions:
++
+[source,cli]
+----
+cat /sys/class/scsi_host/host*/modeldesc
+----
++
+You should see output similar to:
 +
 ----
-# cat /sys/class/scsi_host/host*/modeldesc
-----
-+
-*Example output:*
-+
-----
-Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter 
+Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 ----
 
-. Verify that you are using the recommended Broadcom `lpfc` firmware and inbox driver: 
+. Verify that you are using the recommended Broadcom `lpfc` firmware and inbox driver:
+
+.. Display the firmware version:
++
+[source,cli]
+----
+cat /sys/class/scsi_host/host*/fwrev
+----
++
+The following example shows firmware versions:
 +
 ----
-# cat /sys/class/scsi_host/host*/fwrev 
 14.2.539.16, sli-4:2:c
 14.2.539.16, sli-4:2:c
 ----
+
+.. Display the inbox driver version:
++
+[source,cli]
+----
+cat /sys/module/lpfc/version
+----
++
+The following example shows a driver version:
 +
 ----
-# cat /sys/module/lpfc/version 
 0:14.0.0.21
 ----
 +
 For the current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
-. Verify that `lpfc_enable_fc4_type` is set to `3`:
+. Verify that the expected output of `lpfc_enable_fc4_type` is set to `3`:
 +
+[source,cli]
 ----
-# cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
-3
+cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 ----
 
-. Verify that the initiator ports are up and running and that you can see the target LIFs:
+. Verify that you can view your initiator ports:
++
+[source,cli]
+----
+cat /sys/class/fc_host/host*/port_name
+----
++
+You should see output similar to:
 +
 ----
-# cat /sys/class/fc_host/host*/port_name
 0x10000090fae0ec88
-0x10000090fae0ec89 
+0x10000090fae0ec89
+----
+
+. Verify that your initiator ports are online:
++
+[source,cli]
+----
+cat /sys/class/fc_host/host*/port_state
 ----
 +
+You should see the following output:
++
 ----
-# cat /sys/class/fc_host/host*/port_state
 Online
 Online
 ----
+
+. Verify that the NVMe/FC initiator ports are enabled and that the target ports are visible:
 +
+[source,cli]
+----
+cat /sys/class/scsi_host/host*/nvme_info
+----
++
+.Show example
+[%collapsible]
+====
 [subs=+quotes]
 ----
-# cat /sys/class/scsi_host/host*/nvme_info 
 NVME Initiator Enabled
 XRI Dist lpfc0 Total 6144 IO 5894 ELS 250
 NVME LPORT lpfc0 WWPN x10000090fae0ec88 WWNN x20000090fae0ec88 DID x0a1300 *ONLINE*
 NVME RPORT       WWPN x2049d039ea36a105 WWNN x2048d039ea36a105 DID x0a0c0a *TARGET DISCSRVC ONLINE*
+
 NVME Statistics
 LS: Xmt 0000000024 Cmpl 0000000024 Abort 00000000
 LS XMIT: Err 00000000 CMPL: xb 00000000 Err 00000000
 Total FCP Cmpl 00000000000001aa Issue 00000000000001ab OutIO 0000000000000001
         abort 00000002 noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
 FCP CMPL: xb 00000002 Err 00000003
+
 NVME Initiator Enabled
 XRI Dist lpfc1 Total 6144 IO 5894 ELS 250
 NVME LPORT lpfc1 WWPN x10000090fae0ec89 WWNN x20000090fae0ec89 DID x0a1200 *ONLINE*
 NVME RPORT       WWPN x204ad039ea36a105 WWNN x2048d039ea36a105 DID x0a080a *TARGET DISCSRVC ONLINE*
+
 NVME Statistics
 LS: Xmt 0000000024 Cmpl 0000000024 Abort 00000000
 LS XMIT: Err 00000000 CMPL: xb 00000000 Err 00000000
 Total FCP Cmpl 00000000000001ac Issue 00000000000001ad OutIO 0000000000000001
         abort 00000002 noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
 FCP CMPL: xb 00000002 Err 00000003
-
-
-
 ----
-
-
+====
 --
-
-.Marvell/QLogic FC Adapter for NVMe/FC
+.Marvell/QLogic
 --
-
-The native inbox qla2xxx driver included in the RHEL 8.9 GA kernel has the latest upstream fixes. These fixes are essential for ONTAP support.
+Configure NVMe/FC for a Marvell/QLogic adapter.
 
 .Steps
 
-. Verify that you are running the supported adapter driver and firmware versions:
+. Verify that you are using the supported adapter model, driver, and firmware versions:
 +
+[source,cli]
 ----
-# cat /sys/class/fc_host/host*/symbolic_name
+cat /sys/class/fc_host/host*/symbolic_name
 ----
 +
-*Example output*
+You should see output similar to:
 +
 ----
 QLE2742 FW: v9.10.11 DVR: v10.02.08.200-k
 QLE2742 FW: v9.10.11 DVR: v10.02.08.200-k
+----
+
+. Verify that the recommended inbox qla2xxx driver is loaded:
++
+[source,cli]
+----
+cat /sys/module/qla2xxx/version
+----
++
+You should see the following output:
++
+----
+The driver version included in the RHEL 8.9 kernel.
 ----
 
 . Verify that `ql2xnvmeenable` is set. This enables the Marvell adapter to function as an NVMe/FC initiator:
 +
+[source,cli]
 ----
-# cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
-1
+cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
 ----
-
++
+The expected outptut is 1.
 --
-====
+=====
 
 == Step 3: Optionally, enable 1MB I/O 
 
