--- a/nvme-rhel-91.adoc
+++ b/nvme-rhel-91.adoc
@@ -127,22 +127,28 @@ Configure NVMe/FC for a Broadcom/Emulex adapter.
 . Verify that you are using the supported adapter model:
 
 .. Display the model names:
++
 [source,cli]
 ----
 cat /sys/class/scsi_host/host*/modelname
 ----
++
 You should see the following output:
++
 ----
 LPe32002-M2
 LPe32002-M2
 ----
 
 .. Display the model descriptions:
++
 [source,cli]
 ----
 cat /sys/class/scsi_host/host*/modeldesc
 ----
++
 You should see an output similar to the following example:
++
 ----
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
@@ -151,65 +157,76 @@ Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 . Verify that you are using the recommended Broadcom `lpfc` firmware and inbox driver:
 
 .. Display the firmware version:
++
 [source,cli]
 ----
 cat /sys/class/scsi_host/host*/fwrev
 ----
++
 The following example shows firmware versions:
++
 ----
 14.0.505.11, sli-4:2:c
 14.0.505.11, sli-4:2:c
 ----
 
 .. Display the inbox driver version:
++
 [source,cli]
 ----
 cat /sys/module/lpfc/version
 ----
++
 The following example shows a driver version:
++
 ----
 0:14.2.0.5
 ----
-
++
 For the current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
 . Verify that the expected output of `lpfc_enable_fc4_type` is set to `3`:
++
 [source,cli]
 ----
 cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 ----
-The expected output is:
-----
-3
-----
 
 . Verify that you can view your initiator ports:
++
 [source,cli]
 ----
 cat /sys/class/fc_host/host*/port_name
 ----
++
 You should see the following output:
++
 ----
 0x100000109b1b95ef
 0x100000109b1b95f0
 ----
 
 . Verify that your initiator ports are online:
++
 [source,cli]
 ----
 cat /sys/class/fc_host/host*/port_state
 ----
++
 You should see the following output:
++
 ----
 Online
 Online
 ----
 
 . Verify that the NVMe/FC initiator ports are enabled and that the target ports are visible:
++
 [source,cli]
 ----
 cat /sys/class/scsi_host/host*/nvme_info
 ----
++
 .Show example
 [%collapsible]
 =====
@@ -250,29 +267,42 @@ Configure NVMe/FC for a Marvell/QLogic adapter.
 .Steps
 
 . Verify that you are using the supported adapter model, driver, and firmware versions:
++
 [source,cli]
 ----
 cat /sys/class/fc_host/host*/symbolic_name
 ----
++
 You should see output similar to:
++
 ----
 QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug
 QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug
 ----
 
-. Verify that the recommended inbox `qla2xxx` driver is loaded:
+. Verify that the recommended inbox qla2xxx driver is loaded:
++
 [source,cli]
 ----
 cat /sys/module/qla2xxx/version
 ----
-The expected output is the driver version included in the RHEL 9.1 kernel.
++
+You should see the following output:
++
+----
+The driver version included in the RHEL 9.1 kernel.
+----
 
-. Verify that `ql2xnvmeenable` is set to enable NVMe/FC initiator functionality:
+
+. Verify that `ql2xnvmeenable` is set. This enables the Marvell adapter to function as an NVMe/FC initiator:
++
 [source,cli]
 ----
 cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
 ----
-Expected output:
++
+The expected output is:
++
 ----
 1
 ----
